style.css
*{
   margin: 0;
   padding :0;
   font-family: "PT Sans", sans-serif;
}
header,
footer{
    background-color: #1F2937;

}
header{

    margin: 0;
}
.heromain-herosub{ 
    display: flex;
    justify-content: space-between;

}
.leftside{
    display: flex;
    justify-content: column;
    
}
.heromain-herosub .bigimage{
}

.heromain span{
    display: block;
    margin-top: 0;
    margin-left: 0;
    padding: 0;
}
.space{
    padding-bottom: 30px;    
    padding-top: 20px;
    padding-left: 200px;
    padding-right: 100px;
}
.frontparagraph{
    display:flex;
    
}
h1{
    font-size: 48px;
    font-weight: bolder;
    color: #F9FAF8;
    margin-bottom: 0;
    padding-bottom: 0;
}
.logo{
    height: 60px;
    width: 60px;
}
header nav.flex-container{
    display: flex;
    justify-content: space-between;
    font-weight: lighter;
}
ul{
    display: flex;
    justify-content: space-between;
}
.flex-list{
    display: flex;
    justify-content: space-between;
}
li{
    list-style-type: none;
    display: flex;
    justify-content: space-between;
}

a{
    font-size: 18px;
    color: #E5E7EB;
    text-decoration: none;
    margin-right: 10px;
    padding: 0 10px;
    font-weight: light;
    
}
a:last-child{
    margin-right: 0;
}
.container{
    display: flex;
    justify-content: space-between;
}
.h1ofheader{
    font-size: 24px;
    color: #F9FAF8;
    display: flex;

    margin-bottom: 80px;

}
h1.h1ofheader,
section.frontparagraph{
    flex-direction: column;
}

a{
    justify-content: space-around;
}
h1 .heromain{
    font-size: 48px;
    font-weight: bolder;
    color: #F9FAF8;
    margin-bottom: 0;
    padding-bottom: 0;
    display: inline-flex;
}
.herosub{
    font-size: 18px;
    color: #E5E7EB;
}
.button1{
    margin-top: 20px;
    color:white;
    background-color: #3882F6;
    border: none;
    text-align: center;
    height: 40px;
    width: 120px;
    font-size: 20px;
    font-weight: bolder;
    border-radius: 5px;
    transition-duration: 0.4s;
}
button:hover{
    background-color: #E5E7EB;
    color: black;
}
section img.placeholderimg2{
   height: auto;
   width: 300px;
   border: 5px white dashed;
   border-radius: 10px;
}

.bigimage{
    margin-left: auto;
    margin-top: auto;
    
}
/* main starts here */
.randominfo{
    text-align: center;
    color: #1F2937;
    margin-top: 36px;
    margin-bottom:36px ;
    font-weight: bolder;
}

.flex-boxes1{
    display: flex;
    margin-left: 300px;
    margin-right: 300px;
    justify-content: space-between;
}
.randominfo1,
.randominfo2,
.randominfo3,
.randominfo4
{
    border: 8px solid #3882F6;
    width: auto;
    height: auto;
    border-radius: 8px;
}
.img1,.img2,.img3,.img4{
    width: 120px;
}

figcaption{
    text-align: center;
    text-decoration: underline;
    font-weight: bold;
}
.figsection{
    margin-bottom: 90px;
}
.quote{
    background-color: #E5E7EB;
    font-style: italic;
    height: 200px;
    text-align: center;
    display: flex;
    flex-direction: column;
    padding-top: 50px;
    padding-bottom: 65px;
    padding-left: 300px;
    padding-right: 300px;
    font-size: xx-large;
    margin-bottom: 90px;

}
.quoter{
    text-align: right;
    font-size: 20px;
    font-weight: bolder;
    font-style: italic;
}
.thirdsection{
    border:2px solid #3882F6;
    background-color: #3882F6;
    margin-left: 200px;
    margin-right: 200px;
    border-radius: 10px;
    margin-bottom: 90px;
    display: flex;
    justify-content: space-between;
    color: white;
}
.calltoaction{
    display: flex;
    flex-flow: column;
    padding-top: 60px;
    padding-bottom:60px;
    padding-left: 150px;

}
footer{
    height: 90px;
    color: white;
    text-align: center;
    padding-top: 40px;
    font-size: larger;
}
.signup{
    background-color: #3882F6;
    border: 2px white solid ;
    text-align: center;
    height: 40px;
    width: 120px;
    font-size: 20px;
    font-weight: bolder;
    border-radius: 5px;
    transition-duration: 0.4s;
    color:white;
    padding-bottom: auto;
    margin-top: 60px;
    margin-right: 150px;
}    
.h3calltoaction{
    display: flex;

}
.signup2{
    display: flex;
}

